--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,8 +13,8 @@ env:
   TESTKUBE_CHOCO_REPO: https://chocolatey.kubeshop.io/
   ALPINE_IMAGE: alpine:3.21.3
   BUSYBOX_IMAGE: busybox:1.36.1-musl
-  PROJECT_ID: ${{ secrets.GCP_PROJECT_ID_PROD }}
-  LOCATION:   ${{ secrets.GAR_LOCATION }}
+  GAR_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID_PROD }}
+  GAR_LOCATION:   ${{ secrets.GAR_LOCATION }}
   GAR_REPOSITORY: testkube
 
 jobs:
@@ -71,12 +71,12 @@ jobs:
         if: matrix.name == 'linux'
         uses: google-github-actions/auth@v2
         with:
-          project_id: ${{ env.PROJECT_ID }}
+          project_id: ${{ env.GAR_PROJECT_ID }}
           credentials_json: ${{ secrets.GKE_SA_KEY_PROD }}
 
       - name: Configure Docker for GAR
         if: matrix.name == 'linux'
-        run: gcloud auth configure-docker ${{ env.LOCATION }}-docker.pkg.dev -q
+        run: gcloud auth configure-docker ${{ env.GAR_LOCATION }}-docker.pkg.dev -q
 
       - name: Get tag
         id: tag
@@ -107,7 +107,7 @@ jobs:
       - name: Push Docker images
         if: matrix.name == 'linux'
         run: |
-          GAR_REG='${{ env.LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.GAR_REPOSITORY }}'
+          GAR_REG='${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GAR_PROJECT_ID }}/${{ env.GAR_REPOSITORY }}'
           TAG='${{ steps.tag.outputs.tag }}'
           
           docker push kubeshop/testkube-cli:${{steps.tag.outputs.tag}}-arm64v8
@@ -171,11 +171,11 @@ jobs:
       - name: Setup gcloud (SA key) for GAR
         uses: google-github-actions/auth@v2
         with:
-          project_id: ${{ env.PROJECT_ID }}
+          project_id: ${{ env.GAR_PROJECT_ID }}
           credentials_json: ${{ secrets.GKE_SA_KEY_PROD }}
 
       - name: Configure Docker for GAR
-        run: gcloud auth configure-docker ${{ env.LOCATION }}-docker.pkg.dev -q
+        run: gcloud auth configure-docker ${{ env.GAR_LOCATION }}-docker.pkg.dev -q
 
       - name: Get tag
         id: tag
@@ -212,8 +212,8 @@ jobs:
           tags: |
             kubeshop/testkube-agent:${{steps.tag.outputs.tag}}
             kubeshop/testkube-agent:latest
-            ${{ env.LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/testkube-agent:${{steps.tag.outputs.tag}}
-            ${{ env.LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/testkube-agent:latest
+            ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GAR_PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/testkube-agent:${{steps.tag.outputs.tag}}
+            ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GAR_PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/testkube-agent:latest
 
   release:
     name: Create and upload release-artifacts
