--- a/.github/workflows/new-build.yaml
+++ b/.github/workflows/new-build.yaml
@@ -8,6 +8,9 @@ on:
 env:
   ALPINE_IMAGE: alpine:3.20.6
   BUSYBOX_IMAGE: busybox:1.36.1-musl
+  GAR_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID_PROD }}
+  GAR_LOCATION: ${{ secrets.GAR_LOCATION }}
+  GAR_REPOSITORY: testkube
 
 permissions:
   id-token: write # needed for depot
@@ -28,6 +31,15 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Setup gcloud SA key for GAR
+        uses: google-github-actions/auth@v2
+        with:
+          project_id: ${{ env.GAR_PROJECT_ID }}
+          credentials_json: ${{ secrets.GKE_SA_KEY_PROD }}
+
+      - name: Configure Docker for GAR
+        run: gcloud auth configure-docker ${{ env.GAR_LOCATION }}-docker.pkg.dev -q
+
       - name: Create Docker tags and metadata for the API
         id: api-meta
         uses: docker/metadata-action@v5
@@ -35,6 +47,7 @@ jobs:
           bake-target: 'api-meta'
           images: |
             kubeshop/testkube-api-server
+            ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GAR_PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/api-server
           tags: |
             type=semver,pattern={{version}}
             type=sha,format=short,prefix=
@@ -46,6 +59,7 @@ jobs:
           bake-target: 'tw-init'
           images: |
             kubeshop/testkube-tw-init
+            ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GAR_PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/tw-init
           tags: |
             type=semver,pattern={{version}}
             type=sha,format=short,prefix=
@@ -57,6 +71,7 @@ jobs:
           bake-target: 'tw-toolkit'
           images: |
             kubeshop/testkube-tw-toolkit
+            ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GAR_PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/tw-toolkit
           tags: |
             type=semver,pattern={{version}}
             type=sha,format=short,prefix=
