--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,6 +13,9 @@ env:
   TESTKUBE_CHOCO_REPO: https://chocolatey.kubeshop.io/
   ALPINE_IMAGE: alpine:3.21.3
   BUSYBOX_IMAGE: busybox:1.36.1-musl
+  GAR_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID_PROD }}
+  GAR_LOCATION:   ${{ secrets.GAR_LOCATION }}
+  GAR_REPOSITORY: testkube
 
 jobs:
   pre_build:
@@ -64,6 +67,17 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Setup gcloud SA key for GAR
+        if: matrix.name == 'linux'
+        uses: google-github-actions/auth@v2
+        with:
+          project_id: ${{ env.GAR_PROJECT_ID }}
+          credentials_json: ${{ secrets.GKE_SA_KEY_PROD }}
+
+      - name: Configure Docker for GAR
+        if: matrix.name == 'linux'
+        run: gcloud auth configure-docker ${{ env.GAR_LOCATION }}-docker.pkg.dev -q
+
       - name: Get tag
         id: tag
         uses: dawidd6/action-get-tag@v1
@@ -93,15 +107,36 @@ jobs:
       - name: Push Docker images
         if: matrix.name == 'linux'
         run: |
+          GAR_REG='${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GAR_PROJECT_ID }}/${{ env.GAR_REPOSITORY }}'
+          TAG='${{ steps.tag.outputs.tag }}'
+          
           docker push kubeshop/testkube-cli:${{steps.tag.outputs.tag}}-arm64v8
           docker push kubeshop/testkube-cli:${{steps.tag.outputs.tag}}-amd64
-
+          
           # adding the docker manifest for the latest image tag
           docker manifest create kubeshop/testkube-cli:latest --amend kubeshop/testkube-cli:${{steps.tag.outputs.tag}}-amd64 --amend kubeshop/testkube-cli:${{steps.tag.outputs.tag}}-arm64v8
           docker manifest push -p kubeshop/testkube-cli:latest
-
           docker manifest create kubeshop/testkube-cli:${{steps.tag.outputs.tag}} --amend kubeshop/testkube-cli:${{steps.tag.outputs.tag}}-amd64 --amend kubeshop/testkube-cli:${{steps.tag.outputs.tag}}-arm64v8
           docker manifest push -p kubeshop/testkube-cli:${{steps.tag.outputs.tag}}
+
+          # retag arch images to GAR
+          docker tag kubeshop/testkube-cli:${TAG}-amd64   ${GAR_REG}/cli:${TAG}-amd64
+          docker tag kubeshop/testkube-cli:${TAG}-arm64v8 ${GAR_REG}/cli:${TAG}-arm64v8
+
+          # push arch images to GAR
+          docker push ${GAR_REG}/cli:${TAG}-amd64
+          docker push ${GAR_REG}/cli:${TAG}-arm64v8
+
+          # create & push manifests in GAR
+          docker manifest create ${GAR_REG}/cli:${TAG} \
+            --amend ${GAR_REG}/cli:${TAG}-amd64 \
+            --amend ${GAR_REG}/cli:${TAG}-arm64v8
+          docker manifest push -p ${GAR_REG}/cli:${TAG}
+
+          docker manifest create ${GAR_REG}/cli:latest \
+            --amend ${GAR_REG}/cli:${TAG}-amd64 \
+            --amend ${GAR_REG}/cli:${TAG}-arm64v8
+          docker manifest push -p ${GAR_REG}/cli:latest
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@master
@@ -132,6 +167,15 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Setup gcloud (SA key) for GAR
+        uses: google-github-actions/auth@v2
+        with:
+          project_id: ${{ env.GAR_PROJECT_ID }}
+          credentials_json: ${{ secrets.GKE_SA_KEY_PROD }}
+
+      - name: Configure Docker for GAR
+        run: gcloud auth configure-docker ${{ env.GAR_LOCATION }}-docker.pkg.dev -q
 
       - name: Get tag
         id: tag
@@ -165,7 +209,11 @@ jobs:
           provenance: mode=max
           push: true
           sbom: true
-          tags: kubeshop/testkube-agent:${{steps.tag.outputs.tag}},kubeshop/testkube-agent:latest
+          tags: |
+            kubeshop/testkube-agent:${{steps.tag.outputs.tag}}
+            kubeshop/testkube-agent:latest
+            ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GAR_PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/agent:${{steps.tag.outputs.tag}}
+            ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GAR_PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/agent:latest
 
   release:
     name: Create and upload release-artifacts
