--- a/test/suites/cron/prod/full-suite-cron.yaml
+++ b/test/suites/cron/prod/full-suite-cron.yaml
@@ -12,4 +12,4 @@ spec:
       - name: tw-suite-full-smoke
   events:
   - cronjob:
-      cron: "30 */4 * * *" # every 4 hours
+      cron: "45 02 * * *" # once a day at 02:45
