--- a/test/suites/cron/dev/full-suite-cron.yaml
+++ b/test/suites/cron/dev/full-suite-cron.yaml
@@ -12,4 +12,4 @@ spec:
       - name: tw-suite-full-smoke
   events:
   - cronjob:
-      cron: "30 */4 * * *" # every 4 hours
+      cron: "45 01,13 * * *" # twice a day at 01:45 and 13:45
