--- a/test/suites/special-cases/special-cases-suite.yaml
+++ b/test/suites/special-cases/special-cases-suite.yaml
@@ -28,3 +28,4 @@ spec:
       - name: special-cases-missing-env-secret
       - name: special-cases-missing-configmap-key
       - name: special-cases-no-initial-output
+      - name: special-cases-artifact-double-asterisk
