--- a/test/gradle/crd-workflow/smoke.yaml
+++ b/test/gradle/crd-workflow/smoke.yaml
@@ -13,21 +13,18 @@ spec:
       paths:
       - contrib/executor/gradle/examples/hello-gradle
   container:
+    workingDir: /data/repo/contrib/executor/gradle/examples/hello-gradle
+    image: gradle:8.5.0-jdk11
     resources:
       requests:
         cpu: 512m
         memory: 512Mi
-    workingDir: /data/repo/contrib/executor/gradle/examples/hello-gradle
   job:
     activeDeadlineSeconds: 300
   steps:
   - name: Run tests
     run:
-      image: gradle:8.5.0-jdk11
-      command:
-      - gradle
-      - --no-daemon
-      - test
+      shell: gradle --no-daemon test
       env:
       - name: TESTKUBE_GRADLE
         value: "true"
@@ -47,6 +44,7 @@ spec:
       paths:
       - contrib/executor/gradle/examples/hello-gradle
   container:
+    image: gradle:8.5.0-jdk11
     resources:
       requests:
         cpu: 512m
@@ -57,7 +55,6 @@ spec:
   steps:
   - name: Run tests
     run:
-      image: gradle:8.5.0-jdk11
       env:
       - name: TESTKUBE_GRADLE
         value: "true"
