chore: revert rename assigned to pending

--- a/api/v1/testkube.yaml
+++ b/api/v1/testkube.yaml
@@ -9212,7 +9212,7 @@ components:
       type: string
       enum:
         - queued
-        - pending
+        - assigned
         - starting
         - scheduling
         - running
