--- a/api/v1/testkube.yaml
+++ b/api/v1/testkube.yaml
@@ -4307,7 +4307,7 @@ paths:
       parameters:
         - $ref: "#/components/parameters/ID"
         - $ref: "#/components/parameters/executionID"
-        - $ref: "#/components/parameters/ForceCancellation"
+        - $ref: "#/components/parameters/ForceAgent"
       summary: Abort test workflow execution
       description: Abort test workflow execution
       operationId: abortTestWorkflowExecutionByTestWorkflow
@@ -4677,7 +4677,7 @@ paths:
         - pro
       parameters:
         - $ref: "#/components/parameters/executionID"
-        - $ref: "#/components/parameters/ForceCancellation"
+        - $ref: "#/components/parameters/ForceAgent"
       summary: Abort test workflow execution
       description: Abort test workflow execution
       operationId: abortTestWorkflowExecution
@@ -11978,13 +11978,13 @@ components:
       schema:
         type: string
         description: Test workflow running conntext actor type
-    ForceCancellation:
+    ForceAgent:
       in: query
-      name: forceCancellation
+      name: forceAgent
       schema:
         type: boolean
         default: false
-      description: force cancellation
+      description: force cancellation using agent
       required: false
 
   requestBodies:
