--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -86,17 +86,17 @@ jobs:
 
     services:
       mongo:
-        image: bitnami/mongodb:7.0
+        image: bitnamilegacy/mongodb:7.0
         ports:
           - 27017:27017
       nats:
-        image: bitnami/nats:2
+        image: bitnamilegacy/nats:2
         ports:
           - 4222:4222
           - 6222:6222
           - 8222:8222
       minio:
-        image: bitnami/minio:2025
+        image: bitnamilegacy/minio:2025
         ports:
           - 9000:9000
           - 9001:9001
