--- a/api/v1/testkube.yaml
+++ b/api/v1/testkube.yaml
@@ -4307,6 +4307,7 @@ paths:
       parameters:
         - $ref: "#/components/parameters/ID"
         - $ref: "#/components/parameters/executionID"
+        - $ref: "#/components/parameters/ForceAgent"
       summary: Abort test workflow execution
       description: Abort test workflow execution
       operationId: abortTestWorkflowExecutionByTestWorkflow
@@ -4676,6 +4677,7 @@ paths:
         - pro
       parameters:
         - $ref: "#/components/parameters/executionID"
+        - $ref: "#/components/parameters/ForceAgent"
       summary: Abort test workflow execution
       description: Abort test workflow execution
       operationId: abortTestWorkflowExecution
@@ -11976,6 +11978,14 @@ components:
       schema:
         type: string
         description: Test workflow running conntext actor type
+    ForceAgent:
+      in: query
+      name: forceAgent
+      schema:
+        type: boolean
+        default: false
+      description: force cancellation using agent
+      required: false
 
   requestBodies:
     UploadsBody:
