--- a/test/examples/showcase/crd.yaml
+++ b/test/examples/showcase/crd.yaml
@@ -446,7 +446,7 @@ spec:
       paths:
       - test/nunit/nunit-project/ExampleProject
   container:
-    image: bitnami/dotnet-sdk:8-debian-12
+    image: bitnamilegacy/dotnet-sdk:8-debian-12 # TODO: replace
     resources:
       requests:
         cpu: 512m
