--- a/test/suites/cron/dev/trigger-small-suite-on-deployment.yaml
+++ b/test/suites/cron/dev/trigger-small-suite-on-deployment.yaml
@@ -3,10 +3,11 @@ kind: TestTrigger
 metadata:
   name: trigger-small-suite-on-cloud-deployment
 spec:
-  resource: deployment
-  resourceSelector:
-    name: tk-api-testkube-cloud-api # consistent versioning - just api is enough
-    namespace: testkube-dev
+  selector:
+    matchLabels:
+      testkube.io/resource-kind: Deployment
+      testkube.io/resource-name: tk-api-testkube-cloud-api
+      testkube.io/resource-namespace: testkube-dev
   event: modified
   action: run
   execution: testworkflow
