--- a/test/suites/cron/dev/trigger-small-suite-on-deployment.yaml
+++ b/test/suites/cron/dev/trigger-small-suite-on-deployment.yaml
@@ -6,7 +6,7 @@ spec:
   selector:
     matchLabels:
       testkube.io/resource-kind: Deployment
-      testkube.io/resource-name: tk-api-testkube-cloud-api
+      testkube.io/resource-name: tk-api-testkube-cloud-api # consistent versioning - just api is enough
       testkube.io/resource-namespace: testkube-dev
   event: modified
   action: run
