--- a/proto/buf.gen.yaml
+++ b/proto/buf.gen.yaml
@@ -12,15 +12,17 @@ managed:
     # desired behaviour in order to "purify" these package locations and
     # prevent additional code being introduced into those locations.
     - file_option: go_package_prefix
-      value: .
+      value: github.com/kubeshop/testkube/pkg/proto
 plugins:
   - remote: buf.build/protocolbuffers/go:v1.36.8
     out: ../pkg/proto
     opt:
       - paths=import
+      - module=github.com/kubeshop/testkube/pkg/proto
   - remote: buf.build/grpc/go:v1.5.1
     out: ../pkg/proto
     opt:
       - paths=import
+      - module=github.com/kubeshop/testkube/pkg/proto
 inputs:
   - directory: .
