pytest-workflow-smoke-junit-random-failures - branch updated

--- a/test/pytest/crd-workflow/smoke.yaml
+++ b/test/pytest/crd-workflow/smoke.yaml
@@ -110,7 +110,7 @@ spec:
   content:
     git:
       uri: https://github.com/kubeshop/testkube
-      revision: TKC-4288/junit-flaky-tests
+      revision: main
       paths:
       - test/pytest/pytest-project
   container:
