feat: junit cases extended with pytest-workflow-smoke-junit-random-failures (#6735)
* workflow tests - pyteest random failure with junit report added

* workflow tests - pyteest random failure with junit report updated

* workflow tests - pyteest random failure with junit report updated

* workflow tests - pyteest random failure with junit report updated

* workflow tests - pyteest random failure with junit report updated

* pytest-workflow-smoke-junit-random-failures

* pytest-workflow-smoke-junit-random-failures - branch updated

--- a/test/pytest/crd-workflow/smoke.yaml
+++ b/test/pytest/crd-workflow/smoke.yaml
@@ -68,6 +68,7 @@ metadata:
   name: pytest-workflow-smoke-junit-mixed-failures
   labels:
     core-tests: expected-fail
+    tool: pytest
     artifacts: "true"
     junit: "true"
 spec:
@@ -91,7 +92,42 @@ spec:
     shell: |
       pip install -r requirements.txt
       mkdir /data/artifacts
-      pytest tests --junit-xml=/data/artifacts/pytest-report.xml
+      pytest tests/success tests/fail --junit-xml=/data/artifacts/pytest-report.xml
+    artifacts:
+      paths:
+      - "/data/artifacts/**"
+---
+apiVersion: testworkflows.testkube.io/v1
+kind: TestWorkflow
+metadata:
+  name: pytest-workflow-smoke-junit-random-failures
+  labels:
+    core-tests: expected-random-fail
+    tool: pytest
+    artifacts: "true"
+    junit: "true"
+spec:
+  content:
+    git:
+      uri: https://github.com/kubeshop/testkube
+      revision: main
+      paths:
+      - test/pytest/pytest-project
+  container:
+    image: python:3.12.6-alpine3.20
+    resources:
+      requests:
+        cpu: 256m
+        memory: 256Mi
+    workingDir: /data/repo/test/pytest/pytest-project
+  job:
+    activeDeadlineSeconds: 180
+  steps:
+  - name: Run random tests
+    shell: |
+      pip install -r requirements.txt
+      mkdir /data/artifacts
+      pytest tests/random tests/success --junit-xml=/data/artifacts/pytest-report.xml
     artifacts:
       paths:
       - "/data/artifacts/**"
